--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6ef71fbd",
+   "id": "6a633de8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c06c4500",
+   "id": "712e13c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d88767fe",
+   "execution_count": 3,
+   "id": "d46fd39a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c3374ff6",
+   "execution_count": 4,
+   "id": "0f66b047",
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +62,364 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "eabaa121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import the requests library\n",
+    "import requests\n",
+    "\n",
+    "#import the API key\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "aefecc76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# starting url for weather map API call\n",
+    "\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7182a111",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=dd52020cd9be8fb0682c8eaffc5d7783&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create an endpoint url for a city\n",
+    "\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "53159400",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#make a 'get' request for the city weather\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7072d3f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0e5ec7a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":59.79,\"feels_like\":59.7,\"temp_min\":55.94,\"temp_max\":63.95,\"pressure\":1008,\"humidity\":90},\"visibility\":10000,\"wind\":{\"speed\":8.05,\"deg\":80},\"clouds\":{\"all\":100},\"dt\":1654276299,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1654247359,\"sunset\":1654301749},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get the text of the 'get' request\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "53d1273c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 59.79,\n",
+       "  'feels_like': 59.7,\n",
+       "  'temp_min': 55.94,\n",
+       "  'temp_max': 63.95,\n",
+       "  'pressure': 1008,\n",
+       "  'humidity': 90},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 8.05, 'deg': 80},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1654276299,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1654247359,\n",
+       "  'sunset': 1654301749},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get the JSON text of the 'get' request\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "407932c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "99ebc7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b7dbca85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=dd52020cd9be8fb0682c8eaffc5d7783&q=Bston\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d32c1a26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 59.99,\n",
+       "  'feels_like': 59.86,\n",
+       "  'temp_min': 55.94,\n",
+       "  'temp_max': 63.95,\n",
+       "  'pressure': 1010,\n",
+       "  'humidity': 89},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 8.05, 'deg': 80},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1654277252,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1654247359,\n",
+       "  'sunset': 1654301749},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f100c871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get the Json data\n",
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1753d4da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 63.95 89 100 8.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b2f2435f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'22-06-03 17:17:32'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import the datetime module from the datetime library\n",
+    "from datetime import datetime\n",
+    "#get the date from the JSON file\n",
+    "date = boston_data[\"dt\"]\n",
+    "#convert the UTC date to a date format with year, month, day, hours, minutes, and seconds\n",
+    "datetime.utcfromtimestamp(date).strftime(\"%y-%m-%d %H:%H:%S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6ec9e99e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63.95"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c8220cbc",
+   "id": "ce9e77df",
    "metadata": {},
    "outputs": [],
    "source": []
