--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -88,24 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "7182a111",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=dd52020cd9be8fb0682c8eaffc5d7783&q=Boston\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create an endpoint url for a city\n",
     "\n",
-    "city_url = url + \"&q=\" + \"Boston\"\n",
-    "\n",
-    "print(city_url)"
+    "city_url = url + \"&q=\" + \"Boston\"\n"
    ]
   },
   {
@@ -134,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7072d3f1",
+   "id": "4797204b",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0e5ec7a3",
+   "id": "d21b0e93",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "53d1273c",
+   "id": "e879ff3f",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "407932c5",
+   "id": "52a9d0c2",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "99ebc7ec",
+   "id": "b5593640",
    "metadata": {},
    "outputs": [
     {
@@ -272,26 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b7dbca85",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=dd52020cd9be8fb0682c8eaffc5d7783&q=Bston\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(city_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
-   "id": "d32c1a26",
+   "id": "093a739c",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f100c871",
+   "id": "88d4222f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1753d4da",
+   "id": "59534dc6",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b2f2435f",
+   "id": "b10b9e14",
    "metadata": {},
    "outputs": [
     {
@@ -399,27 +371,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "6ec9e99e",
+   "execution_count": 30,
+   "id": "e966788c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "63.95"
+       "'06/03/22'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#import the time module\n",
+    "import time\n",
+    "\n",
+    "#get today's date in seconds\n",
+    "\n",
+    "today=time.strftime(\"%x\")\n",
+    "today"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce9e77df",
+   "id": "50bc4030",
    "metadata": {},
    "outputs": [],
    "source": []
