--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -17,6 +17,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "import gmaps\n",
+    "import gmaps.datasets\n",
     "\n",
     "# Import API key\n",
     "from config_itinerary import g_key\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +138,7 @@
        "4   18.2667         Hotel Du Lac  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "288a4cf795924fb9a098f9d3051b6117",
+       "model_id": "ab56af5dff67494bbef3310cbf86c44b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,11 +217,11 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[]\n",
-    "vacation_end = vacation_df.loc[]\n",
-    "vacation_stop1 = vacation_df.loc[]\n",
-    "vacation_stop2 = vacation_df.loc[] \n",
-    "vacation_stop3 = vacation_df.loc[] "
+    "vacation_start = vacation_df.loc[(vacation_df[\"Hotel Name\"] == \"Hotel los Mangos\")]\n",
+    "vacation_end = vacation_df.loc[(vacation_df[\"Hotel Name\"] == \"Hotel los Mangos\")]\n",
+    "vacation_stop1 = vacation_df.loc[(vacation_df[\"Hotel Name\"] == \"hotel la terminal\")]\n",
+    "vacation_stop2 = vacation_df.loc[(vacation_df[\"Hotel Name\"] == \"El Salvial\")] \n",
+    "vacation_stop3 = vacation_df.loc[(vacation_df[\"Hotel Name\"] == \"El rranchito michuacan de ocampos\")] \n"
    ]
   },
   {
@@ -230,11 +231,11 @@
    "outputs": [],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = \n",
-    "end = \n",
-    "stop1 = \n",
-    "stop2 = \n",
-    "stop3 = "
+    "start = vacation_start[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
+    "end = vacation_end[\"Lat\"].to_numpy()[0], vacation_end[\"Lng\"].to_numpy()[0]\n",
+    "stop1 = vacation_stop1[\"Lat\"].to_numpy()[0], vacation_stop1[\"Lng\"].to_numpy()[0]\n",
+    "stop2 = vacation_stop2[\"Lat\"].to_numpy()[0], vacation_stop2[\"Lng\"].to_numpy()[0]\n",
+    "stop3 = vacation_stop3[\"Lat\"].to_numpy()[0], vacation_stop3[\"Lng\"].to_numpy()[0]"
    ]
   },
   {
@@ -243,22 +244,140 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2dbaa372a90541448e460d3e7a40782c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
     "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "\n"
+    "\n",
+    "fig = gmaps.figure()\n",
+    "startend = gmaps.directions_layer(start, end, waypoints=[stop1, stop2, stop3],travel_mode=\"DRIVING\")\n",
+    "fig.add_layer(startend)\n",
+    "fig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>404</td>\n",
+       "      <td>Teacapan</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>22.5500</td>\n",
+       "      <td>-105.7500</td>\n",
+       "      <td>Hotel los Mangos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>463</td>\n",
+       "      <td>Ixtapa</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>83.43</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>20.7000</td>\n",
+       "      <td>-105.2000</td>\n",
+       "      <td>hotel la terminal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>337</td>\n",
+       "      <td>Tomatlan</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>87.91</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>19.9333</td>\n",
+       "      <td>-105.2500</td>\n",
+       "      <td>El Salvial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>365</td>\n",
+       "      <td>Coahuayana</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>87.22</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>18.7333</td>\n",
+       "      <td>-103.6833</td>\n",
+       "      <td>El rranchito michuacan de ocampos</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
+       "0      404    Teacapan      MX     83.84           clear sky  22.5500   \n",
+       "1      463      Ixtapa      MX     83.43           clear sky  20.7000   \n",
+       "2      337    Tomatlan      MX     87.91          few clouds  19.9333   \n",
+       "3      365  Coahuayana      MX     87.22       broken clouds  18.7333   \n",
+       "\n",
+       "        Lng                         Hotel Name  \n",
+       "0 -105.7500                   Hotel los Mangos  \n",
+       "1 -105.2000                  hotel la terminal  \n",
+       "2 -105.2500                         El Salvial  \n",
+       "3 -103.6833  El rranchito michuacan de ocampos  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. To create a marker layer map between the four cities.\n",
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
-    "itinerary_df = pd.concat([],ignore_index=True)\n",
+    "itinerary_df = pd.concat([vacation_start, vacation_stop1, vacation_stop2, vacation_stop3],ignore_index=True)\n",
     "itinerary_df"
    ]
   },
@@ -270,7 +389,11 @@
    "source": [
     "# 9 Using the template add city name, the country code, the weather description and maximum temperature for the city. \n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Weather</dt><dd>{Current Description} and {Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 10a Get the data from each row and add it to the formatting template and store the data in a list.\n",
@@ -284,11 +407,36 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a037b3a1ba6142158cec435133287ebd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
+    "locations = itinerary_df[[\"Lat\", \"Lng\"]]\n",
     "\n",
-    "# 11b. Display the figure\n"
+    "max_temp = itinerary_df[\"Max Temp\"]\n",
+    "\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# 11b. Display the figure\n",
+    "fig"
    ]
   },
   {
